--- a/team.html
+++ b/team.html
@@ -142,6 +142,18 @@
             Creates stunning visuals and ensures a seamless user experience.
           </div>
         </div>
+        <div class="member-card">
+          <img
+            class="member-photo"
+            src="https://randomuser.me/api/portraits/women/68.jpg"
+            alt="Emily White"
+          />
+          <div class="member-name">Emily White</div>
+          <div class="member-role">Designer</div>
+          <div class="member-bio">
+            Creates stunning visuals and ensures a seamless user experience.
+          </div>
+        </div>
       </div>
     </div>
   </body>
